force-app/main/default/objects/attendence_details__c/attendence_details__c.object-meta.xml
<CustomObject>
    <label>attendence detail</label>
    <nameField>
        <label>student name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>attendence details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>