force-app/main/default/objects/attendence_details__c/fields/dec__c.field-meta.xml
<CustomField>
    <fullName>dec__c</fullName>
    <label>dec</label>
    <length>20</length>
    <type>Text</type>
</CustomField>