force-app/main/default/objects/attendence_details__c/fields/feb__c.field-meta.xml
<CustomField>
    <fullName>feb__c</fullName>
    <label>feb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>