force-app/main/default/objects/attendence_details__c/fields/jan__c.field-meta.xml
<CustomField>
    <fullName>jan__c</fullName>
    <label>jan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>